--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -72,7 +72,16 @@
     "position_qr": "将二维码放在框架内进行扫描",
     "camera_error": "此设备上未找到相机。",
     "camera_permission": "无法访问相机。请检查浏览器权限。",
-    "live_scan_error": "启动实时扫描失败。"
+    "live_scan_error": "启动实时扫描失败。",
+    "manual_auth_instructions_title": "手动身份验证",
+    "manual_auth_step1": "1. 在新窗口中正常登录。",
+    "manual_auth_step2": "2. 等待窗口自动关闭。",
+    "manual_auth_note": "请勿手动关闭登录窗口。身份验证完成后，窗口将自动关闭。",
+    "feature_dashboard_desc": "主要概览",
+    "feature_assessments_desc": "查看作业",
+    "feature_timetable_desc": "课程表",
+    "feature_analytics_desc": "性能数据",
+    "feature_settings_desc": "应用偏好设置"
   },
   "about": {
     "title": "关于DesQTA",
