feat: add comprehensive i18n keys for UI components

--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -42,7 +42,8 @@
     "toggle_sidebar": "Alternar barra lateral",
     "minimize": "Minimizar",
     "maximize": "Maximizar",
-    "close": "Cerrar"
+    "close": "Cerrar",
+    "notifications": "Notificaciones"
   },
   "login": {
     "welcome_to": "Bienvenido a",
@@ -85,7 +86,39 @@
   },
   "about": {
     "title": "Acerca de DesQTA",
-    "subtitle": "Tu Experiencia de Escritorio SEQTA Learn"
+    "subtitle": "Tu Experiencia de Escritorio SEQTA Learn",
+    "modal_aria_label": "Modal Acerca de",
+    "version_information": "Información de Versión",
+    "version": "Versión",
+    "build_date": "Fecha de Compilación",
+    "platform": "Plataforma",
+    "desktop": "Escritorio",
+    "built_by": "Construido Por",
+    "contributors_alt": "Contribuidores a DesQTA",
+    "features": "Características",
+    "feature_course_management": "Gestión de Cursos",
+    "feature_timetable": "Horario (vista semanal, exportar, detalles de lecciones)",
+    "feature_assessments": "Seguimiento de Evaluaciones y Predicciones de Calificaciones con IA",
+    "feature_analytics": "Análisis (distribución de calificaciones, gráficos de rendimiento)",
+    "feature_messaging": "Mensajería Direqt (carpetas, RSS, redactar, MD)",
+    "feature_notifications": "Notificaciones y Recordatorios en Tiempo Real",
+    "feature_news": "Lector de Noticias (RSS multi-país, selección de fuente)",
+    "feature_notice_board": "Tablón de Anuncios con Filtrado por Etiquetas",
+    "feature_reports": "Visor y Descarga de Informes",
+    "feature_qr_signin": "Utilidad de Inicio de Sesión QR",
+    "feature_homepage": "Accesos Rápidos y Widgets Personalizados",
+    "feature_cloud_sync": "Sincronización en la Nube para Configuraciones",
+    "feature_theming": "Personalización de Apariencia y Temas",
+    "feature_sidebar": "Barra Lateral Auto-Colapsar y Auto-Expandir al Pasar el Mouse",
+    "feature_animations": "Animaciones de UI Mejoradas y Divertidas",
+    "feature_plugins": "Sistema de Complementos para Extensibilidad",
+    "feature_ai": "Integraciones de IA (Gemini, Análisis de Calificaciones y Lecciones)",
+    "links": "Enlaces",
+    "github_repository": "Repositorio de GitHub",
+    "view_source_code": "Ver código fuente",
+    "website": "Sitio Web",
+    "official_website": "Sitio web oficial",
+    "copyright": "© 2025 DesQTA. Licenciado bajo Licencia MIT."
   },
   "dashboard": {
     "quick_links": "Enlaces Rápidos",
@@ -577,5 +610,65 @@
   },
   "study": {
     "tabs_label": "Secciones de Estudio"
+  },
+  "toast": {
+    "close_notification": "Cerrar notificación",
+    "notifications": "Notificaciones"
+  },
+  "user": {
+    "user_menu": "Menú de usuario",
+    "about": "Acerca de",
+    "app_information": "Información de la aplicación",
+    "get_help": "Obtener Ayuda",
+    "user_guide_faq": "Guía del usuario y preguntas frecuentes",
+    "sign_out": "Cerrar sesión",
+    "end_session": "Terminar tu sesión",
+    "quit_app": "Salir de DesQTA",
+    "close_application": "Cerrar la aplicación"
+  },
+  "modal": {
+    "close_modal": "Cerrar modal"
+  },
+  "troubleshooting": {
+    "title": "Solución Avanzada de Problemas",
+    "tab_diagnostics": "Diagnósticos del Sistema",
+    "tab_errors": "Registros de Errores",
+    "tab_logs": "Registros del Sistema",
+    "tab_performance": "Rendimiento",
+    "tab_network": "Red",
+    "tab_storage": "Almacenamiento",
+    "tab_troubleshooting": "Solución de Problemas",
+    "run_diagnostics": "Ejecutar Diagnósticos",
+    "copied": "¡Copiado!",
+    "copy_report": "Copiar Informe",
+    "clear_logs": "Limpiar Registros",
+    "loading": "Cargando...",
+    "load_logs": "Cargar Registros",
+    "export_all": "Exportar Todo",
+    "no_logs_loaded": "No se cargaron registros",
+    "click_load_logs": "Haz clic en \"Cargar Registros\" para obtener los registros recientes del sistema",
+    "test_api_connection": "Probar Conexión API",
+    "test_internet_connection": "Probar Conexión a Internet",
+    "clear_local_storage": "Limpiar Almacenamiento Local",
+    "clear_session_storage": "Limpiar Almacenamiento de Sesión",
+    "recent_error_logs": "Registros de Errores Recientes",
+    "system_logs": "Registros del Sistema",
+    "performance_metrics": "Métricas de Rendimiento",
+    "network_information": "Información de Red",
+    "storage_information": "Información de Almacenamiento",
+    "system_health": "Salud del Sistema",
+    "network_status": "Estado de la Red",
+    "storage_status": "Estado del Almacenamiento",
+    "error_statistics": "Estadísticas de Errores",
+    "connection_details": "Detalles de Conexión",
+    "network_tests": "Pruebas de Red",
+    "api_test_result": "Resultado de Prueba API",
+    "browser_memory_usage": "Uso de Memoria del Navegador",
+    "load_times": "Tiempos de Carga",
+    "performance_issues": "Problemas de Rendimiento",
+    "troubleshooting_steps": "Pasos de Solución de Problemas",
+    "common_solutions": "Soluciones Comunes",
+    "advanced_troubleshooting": "Solución Avanzada de Problemas",
+    "specific_recommendations": "Recomendaciones Específicas"
   }
 }
