--- a/src/lib/i18n/locales/fr.json
+++ b/src/lib/i18n/locales/fr.json
@@ -42,7 +42,8 @@
     "toggle_sidebar": "Basculer la barre latérale",
     "minimize": "Réduire",
     "maximize": "Agrandir",
-    "close": "Fermer"
+    "close": "Fermer",
+    "notifications": "Notifications"
   },
   "login": {
     "welcome_to": "Bienvenue sur",
@@ -85,7 +86,39 @@
   },
   "about": {
     "title": "À propos de DesQTA",
-    "subtitle": "Votre Expérience Bureau SEQTA Learn"
+    "subtitle": "Votre Expérience Bureau SEQTA Learn",
+    "modal_aria_label": "Modal À propos",
+    "version_information": "Informations sur la Version",
+    "version": "Version",
+    "build_date": "Date de Compilation",
+    "platform": "Plateforme",
+    "desktop": "Bureau",
+    "built_by": "Construit Par",
+    "contributors_alt": "Contributeurs à DesQTA",
+    "features": "Fonctionnalités",
+    "feature_course_management": "Gestion des Cours",
+    "feature_timetable": "Emploi du Temps (vue hebdomadaire, export, détails des cours)",
+    "feature_assessments": "Suivi des Évaluations et Prédictions de Notes IA",
+    "feature_analytics": "Analyses (distribution des notes, graphiques de performance)",
+    "feature_messaging": "Messagerie Direqt (dossiers, RSS, composer, MD)",
+    "feature_notifications": "Notifications et Rappels en Temps Réel",
+    "feature_news": "Lecteur de Nouvelles (RSS multi-pays, sélection de source)",
+    "feature_notice_board": "Tableau d'Annonces avec Filtrage par Étiquettes",
+    "feature_reports": "Visualiseur et Téléchargement de Rapports",
+    "feature_qr_signin": "Utilitaire de Connexion QR",
+    "feature_homepage": "Raccourcis d'Accueil et Widgets Personnalisés",
+    "feature_cloud_sync": "Synchronisation Cloud pour les Paramètres",
+    "feature_theming": "Personnalisation de l'Apparence et des Thèmes",
+    "feature_sidebar": "Barre Latérale Auto-Réduction et Auto-Expansion au Survol",
+    "feature_animations": "Animations UI Améliorées et Ludiques",
+    "feature_plugins": "Système de Plugins pour l'Extensibilité",
+    "feature_ai": "Intégrations IA (Gemini, Analyse des Notes et Cours)",
+    "links": "Liens",
+    "github_repository": "Dépôt GitHub",
+    "view_source_code": "Voir le code source",
+    "website": "Site Web",
+    "official_website": "Site web officiel",
+    "copyright": "© 2025 DesQTA. Sous licence MIT."
   },
   "dashboard": {
     "quick_links": "Liens Rapides",
@@ -577,5 +610,65 @@
   },
   "study": {
     "tabs_label": "Sections d'Étude"
+  },
+  "toast": {
+    "close_notification": "Fermer la notification",
+    "notifications": "Notifications"
+  },
+  "user": {
+    "user_menu": "Menu utilisateur",
+    "about": "À propos",
+    "app_information": "Informations sur l'application",
+    "get_help": "Obtenir de l'Aide",
+    "user_guide_faq": "Guide utilisateur et FAQ",
+    "sign_out": "Se déconnecter",
+    "end_session": "Terminer votre session",
+    "quit_app": "Quitter DesQTA",
+    "close_application": "Fermer l'application"
+  },
+  "modal": {
+    "close_modal": "Fermer le modal"
+  },
+  "troubleshooting": {
+    "title": "Dépannage Avancé",
+    "tab_diagnostics": "Diagnostics Système",
+    "tab_errors": "Journaux d'Erreurs",
+    "tab_logs": "Journaux Système",
+    "tab_performance": "Performance",
+    "tab_network": "Réseau",
+    "tab_storage": "Stockage",
+    "tab_troubleshooting": "Dépannage",
+    "run_diagnostics": "Exécuter les Diagnostics",
+    "copied": "Copié !",
+    "copy_report": "Copier le Rapport",
+    "clear_logs": "Effacer les Journaux",
+    "loading": "Chargement...",
+    "load_logs": "Charger les Journaux",
+    "export_all": "Tout Exporter",
+    "no_logs_loaded": "Aucun journal chargé",
+    "click_load_logs": "Cliquez sur \"Charger les Journaux\" pour récupérer les journaux système récents",
+    "test_api_connection": "Tester la Connexion API",
+    "test_internet_connection": "Tester la Connexion Internet",
+    "clear_local_storage": "Effacer le Stockage Local",
+    "clear_session_storage": "Effacer le Stockage de Session",
+    "recent_error_logs": "Journaux d'Erreurs Récents",
+    "system_logs": "Journaux Système",
+    "performance_metrics": "Métriques de Performance",
+    "network_information": "Informations Réseau",
+    "storage_information": "Informations de Stockage",
+    "system_health": "Santé du Système",
+    "network_status": "État du Réseau",
+    "storage_status": "État du Stockage",
+    "error_statistics": "Statistiques d'Erreurs",
+    "connection_details": "Détails de Connexion",
+    "network_tests": "Tests Réseau",
+    "api_test_result": "Résultat du Test API",
+    "browser_memory_usage": "Utilisation de la Mémoire du Navigateur",
+    "load_times": "Temps de Chargement",
+    "performance_issues": "Problèmes de Performance",
+    "troubleshooting_steps": "Étapes de Dépannage",
+    "common_solutions": "Solutions Communes",
+    "advanced_troubleshooting": "Dépannage Avancé",
+    "specific_recommendations": "Recommandations Spécifiques"
   }
 }
