--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -42,7 +42,8 @@
     "toggle_sidebar": "Seitenleiste umschalten",
     "minimize": "Minimieren",
     "maximize": "Maximieren",
-    "close": "Schließen"
+    "close": "Schließen",
+    "notifications": "Benachrichtigungen"
   },
   "login": {
     "welcome_to": "Willkommen bei",
@@ -85,7 +86,39 @@
   },
   "about": {
     "title": "Über DesQTA",
-    "subtitle": "Ihr SEQTA Learn Desktop-Erlebnis"
+    "subtitle": "Ihr SEQTA Learn Desktop-Erlebnis",
+    "modal_aria_label": "Über-Modal",
+    "version_information": "Versionsinformationen",
+    "version": "Version",
+    "build_date": "Build-Datum",
+    "platform": "Plattform",
+    "desktop": "Desktop",
+    "built_by": "Erstellt Von",
+    "contributors_alt": "Mitwirkende an DesQTA",
+    "features": "Funktionen",
+    "feature_course_management": "Kursverwaltung",
+    "feature_timetable": "Stundenplan (Wochenansicht, Export, Unterrichtsdetails)",
+    "feature_assessments": "Bewertungsverfolgung & KI-Notenvorhersagen",
+    "feature_analytics": "Analysen (Notenverteilung, Leistungsdiagramme)",
+    "feature_messaging": "Direqt-Messaging (Ordner, RSS, Verfassen, DMs)",
+    "feature_notifications": "Echtzeit-Benachrichtigungen & Erinnerungen",
+    "feature_news": "Nachrichtenleser (Multi-Land RSS, Quellenauswahl)",
+    "feature_notice_board": "Anschlagbrett mit Label-Filterung",
+    "feature_reports": "Berichts-Viewer & Download",
+    "feature_qr_signin": "QR-Anmelde-Utility",
+    "feature_homepage": "Startseiten-Verknüpfungen & Benutzerdefinierte Widgets",
+    "feature_cloud_sync": "Cloud-Synchronisierung für Einstellungen",
+    "feature_theming": "Erscheinungsbild & Theme-Anpassung",
+    "feature_sidebar": "Seitenleiste Auto-Zuklappen & Auto-Aufklappen beim Hovern",
+    "feature_animations": "Verbesserte Spielerische UI-Animationen",
+    "feature_plugins": "Plugin-System für Erweiterbarkeit",
+    "feature_ai": "KI-Integrationen (Gemini, Noten- & Unterrichtsanalyse)",
+    "links": "Links",
+    "github_repository": "GitHub-Repository",
+    "view_source_code": "Quellcode anzeigen",
+    "website": "Website",
+    "official_website": "Offizielle Website",
+    "copyright": "© 2025 DesQTA. Lizenziert unter MIT-Lizenz."
   },
   "dashboard": {
     "quick_links": "Schnellzugriffe",
@@ -577,5 +610,65 @@
   },
   "study": {
     "tabs_label": "Studienabschnitte"
+  },
+  "toast": {
+    "close_notification": "Benachrichtigung schließen",
+    "notifications": "Benachrichtigungen"
+  },
+  "user": {
+    "user_menu": "Benutzermenü",
+    "about": "Über",
+    "app_information": "App-Informationen",
+    "get_help": "Hilfe Erhalten",
+    "user_guide_faq": "Benutzerhandbuch & FAQ",
+    "sign_out": "Abmelden",
+    "end_session": "Ihre Sitzung beenden",
+    "quit_app": "DesQTA beenden",
+    "close_application": "Anwendung schließen"
+  },
+  "modal": {
+    "close_modal": "Modal schließen"
+  },
+  "troubleshooting": {
+    "title": "Erweiterte Fehlerbehebung",
+    "tab_diagnostics": "Systemdiagnose",
+    "tab_errors": "Fehlerprotokolle",
+    "tab_logs": "Systemprotokolle",
+    "tab_performance": "Leistung",
+    "tab_network": "Netzwerk",
+    "tab_storage": "Speicher",
+    "tab_troubleshooting": "Fehlerbehebung",
+    "run_diagnostics": "Diagnose Ausführen",
+    "copied": "Kopiert!",
+    "copy_report": "Bericht Kopieren",
+    "clear_logs": "Protokolle Löschen",
+    "loading": "Laden...",
+    "load_logs": "Protokolle Laden",
+    "export_all": "Alles Exportieren",
+    "no_logs_loaded": "Keine Protokolle geladen",
+    "click_load_logs": "Klicken Sie auf \"Protokolle Laden\", um die neuesten Systemprotokolle abzurufen",
+    "test_api_connection": "API-Verbindung Testen",
+    "test_internet_connection": "Internetverbindung Testen",
+    "clear_local_storage": "Lokalen Speicher Löschen",
+    "clear_session_storage": "Sitzungsspeicher Löschen",
+    "recent_error_logs": "Letzte Fehlerprotokolle",
+    "system_logs": "Systemprotokolle",
+    "performance_metrics": "Leistungsmetriken",
+    "network_information": "Netzwerkinformationen",
+    "storage_information": "Speicherinformationen",
+    "system_health": "Systemgesundheit",
+    "network_status": "Netzwerkstatus",
+    "storage_status": "Speicherstatus",
+    "error_statistics": "Fehlerstatistiken",
+    "connection_details": "Verbindungsdetails",
+    "network_tests": "Netzwerktests",
+    "api_test_result": "API-Testergebnis",
+    "browser_memory_usage": "Browser-Speichernutzung",
+    "load_times": "Ladezeiten",
+    "performance_issues": "Leistungsprobleme",
+    "troubleshooting_steps": "Fehlerbehebungs-Schritte",
+    "common_solutions": "Häufige Lösungen",
+    "advanced_troubleshooting": "Erweiterte Fehlerbehebung",
+    "specific_recommendations": "Spezifische Empfehlungen"
   }
 }
