--- a/src/lib/i18n/locales/en-pirate.json
+++ b/src/lib/i18n/locales/en-pirate.json
@@ -89,7 +89,39 @@
   },
   "about": {
     "title": "About this here DesQTA vessel",
-    "subtitle": "Yer SEQTA Learn Desktop Adventure"
+    "subtitle": "Yer SEQTA Learn Desktop Adventure",
+    "modal_aria_label": "About Modal",
+    "version_information": "Version Information",
+    "version": "Version",
+    "build_date": "Build Date",
+    "platform": "Platform",
+    "desktop": "Desktop",
+    "built_by": "Built By",
+    "contributors_alt": "Contributers to DesQTA",
+    "features": "Features",
+    "feature_course_management": "Course Management",
+    "feature_timetable": "Timetable (week view, export, lesson details)",
+    "feature_assessments": "Assessment Tracking & AI Grade Predictions",
+    "feature_analytics": "Analytics (grade distribution, performance graphs)",
+    "feature_messaging": "Direqt Messaging (folders, RSS, compose, DMs)",
+    "feature_notifications": "Real-time Notifications & Reminders",
+    "feature_news": "News Reader (multi-country RSS, source selection)",
+    "feature_notice_board": "Notice Board with Label Filtering",
+    "feature_reports": "Reports Viewer & Download",
+    "feature_qr_signin": "QR Sign-in Utility",
+    "feature_homepage": "Homepage Shortcuts & Custom Widgets",
+    "feature_cloud_sync": "Cloud Sync for Settings",
+    "feature_theming": "Appearance & Theme Customization",
+    "feature_sidebar": "Sidebar Auto-Collapse & Auto-Expand on Hover",
+    "feature_animations": "Enhanced Playful UI Animations",
+    "feature_plugins": "Plugin System for Extensibility",
+    "feature_ai": "AI Integrations (Gemini, Grade & Lesson Analysis)",
+    "links": "Links",
+    "github_repository": "GitHub Repository",
+    "view_source_code": "View source code",
+    "website": "Website",
+    "official_website": "Official website",
+    "copyright": "© 2025 DesQTA. Licensed under MIT License."
   },
   "dashboard": {
     "quick_links": "Swift Routes",
@@ -581,5 +613,65 @@
   },
   "study": {
     "tabs_label": "Study sections"
+  },
+  "toast": {
+    "close_notification": "Close notification",
+    "notifications": "Notifications"
+  },
+  "user": {
+    "user_menu": "User menu",
+    "about": "About",
+    "app_information": "App information",
+    "get_help": "Get Help",
+    "user_guide_faq": "User guide & FAQ",
+    "sign_out": "Sign out",
+    "end_session": "End yer session",
+    "quit_app": "Quit DesQTA",
+    "close_application": "Close the application"
+  },
+  "modal": {
+    "close_modal": "Close modal"
+  },
+  "troubleshooting": {
+    "title": "Advanced Troubleshooting",
+    "tab_diagnostics": "System Diagnostics",
+    "tab_errors": "Error Logs",
+    "tab_logs": "System Logs",
+    "tab_performance": "Performance",
+    "tab_network": "Network",
+    "tab_storage": "Storage",
+    "tab_troubleshooting": "Troubleshooting",
+    "run_diagnostics": "Run Diagnostics",
+    "copied": "Copied!",
+    "copy_report": "Copy Report",
+    "clear_logs": "Clear Logs",
+    "loading": "Loading...",
+    "load_logs": "Load Logs",
+    "export_all": "Export All",
+    "no_logs_loaded": "No logs loaded",
+    "click_load_logs": "Click \"Load Logs\" to fetch recent system logs",
+    "test_api_connection": "Test API Connection",
+    "test_internet_connection": "Test Internet Connection",
+    "clear_local_storage": "Clear Local Storage",
+    "clear_session_storage": "Clear Session Storage",
+    "recent_error_logs": "Recent Error Logs",
+    "system_logs": "System Logs",
+    "performance_metrics": "Performance Metrics",
+    "network_information": "Network Information",
+    "storage_information": "Storage Information",
+    "system_health": "System Health",
+    "network_status": "Network Status",
+    "storage_status": "Storage Status",
+    "error_statistics": "Error Statistics",
+    "connection_details": "Connection Details",
+    "network_tests": "Network Tests",
+    "api_test_result": "API Test Result",
+    "browser_memory_usage": "Browser Memory Usage",
+    "load_times": "Load Times",
+    "performance_issues": "Performance Issues",
+    "troubleshooting_steps": "Troubleshooting Steps",
+    "common_solutions": "Common Solutions",
+    "advanced_troubleshooting": "Advanced Troubleshooting",
+    "specific_recommendations": "Specific Recommendations"
   }
 }
