--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -42,7 +42,8 @@
     "toggle_sidebar": "サイドバーを切り替え",
     "minimize": "最小化",
     "maximize": "最大化",
-    "close": "閉じる"
+    "close": "閉じる",
+    "notifications": "通知"
   },
   "login": {
     "welcome_to": "ようこそ",
@@ -85,7 +86,39 @@
   },
   "about": {
     "title": "DesQTAについて",
-    "subtitle": "あなたのSEQTA Learnデスクトップ体験"
+    "subtitle": "あなたのSEQTA Learnデスクトップ体験",
+    "modal_aria_label": "についてモーダル",
+    "version_information": "バージョン情報",
+    "version": "バージョン",
+    "build_date": "ビルド日",
+    "platform": "プラットフォーム",
+    "desktop": "デスクトップ",
+    "built_by": "作成者",
+    "contributors_alt": "DesQTAへの貢献者",
+    "features": "機能",
+    "feature_course_management": "コース管理",
+    "feature_timetable": "時間割（週表示、エクスポート、レッスン詳細）",
+    "feature_assessments": "評価追跡とAI成績予測",
+    "feature_analytics": "分析（成績分布、パフォーマンスグラフ）",
+    "feature_messaging": "Direqtメッセージング（フォルダ、RSS、作成、DM）",
+    "feature_notifications": "リアルタイム通知とリマインダー",
+    "feature_news": "ニュースリーダー（複数国RSS、ソース選択）",
+    "feature_notice_board": "ラベルフィルタリング付き掲示板",
+    "feature_reports": "レポートビューアとダウンロード",
+    "feature_qr_signin": "QRサインインユーティリティ",
+    "feature_homepage": "ホームページショートカットとカスタムウィジェット",
+    "feature_cloud_sync": "設定のクラウド同期",
+    "feature_theming": "外観とテーマのカスタマイズ",
+    "feature_sidebar": "サイドバーの自動折りたたみとホバー時の自動展開",
+    "feature_animations": "強化された楽しいUIアニメーション",
+    "feature_plugins": "拡張性のためのプラグインシステム",
+    "feature_ai": "AI統合（Gemini、成績とレッスン分析）",
+    "links": "リンク",
+    "github_repository": "GitHubリポジトリ",
+    "view_source_code": "ソースコードを表示",
+    "website": "ウェブサイト",
+    "official_website": "公式ウェブサイト",
+    "copyright": "© 2025 DesQTA。MITライセンスの下でライセンスされています。"
   },
   "dashboard": {
     "quick_links": "クイックリンク",
@@ -577,5 +610,65 @@
   },
   "study": {
     "tabs_label": "学習セクション"
+  },
+  "toast": {
+    "close_notification": "通知を閉じる",
+    "notifications": "通知"
+  },
+  "user": {
+    "user_menu": "ユーザーメニュー",
+    "about": "について",
+    "app_information": "アプリ情報",
+    "get_help": "ヘルプを取得",
+    "user_guide_faq": "ユーザーガイドとFAQ",
+    "sign_out": "サインアウト",
+    "end_session": "セッションを終了",
+    "quit_app": "DesQTAを終了",
+    "close_application": "アプリケーションを閉じる"
+  },
+  "modal": {
+    "close_modal": "モーダルを閉じる"
+  },
+  "troubleshooting": {
+    "title": "高度なトラブルシューティング",
+    "tab_diagnostics": "システム診断",
+    "tab_errors": "エラーログ",
+    "tab_logs": "システムログ",
+    "tab_performance": "パフォーマンス",
+    "tab_network": "ネットワーク",
+    "tab_storage": "ストレージ",
+    "tab_troubleshooting": "トラブルシューティング",
+    "run_diagnostics": "診断を実行",
+    "copied": "コピーしました！",
+    "copy_report": "レポートをコピー",
+    "clear_logs": "ログをクリア",
+    "loading": "読み込み中...",
+    "load_logs": "ログを読み込む",
+    "export_all": "すべてエクスポート",
+    "no_logs_loaded": "ログが読み込まれていません",
+    "click_load_logs": "「ログを読み込む」をクリックして最近のシステムログを取得",
+    "test_api_connection": "API接続をテスト",
+    "test_internet_connection": "インターネット接続をテスト",
+    "clear_local_storage": "ローカルストレージをクリア",
+    "clear_session_storage": "セッションストレージをクリア",
+    "recent_error_logs": "最近のエラーログ",
+    "system_logs": "システムログ",
+    "performance_metrics": "パフォーマンスメトリクス",
+    "network_information": "ネットワーク情報",
+    "storage_information": "ストレージ情報",
+    "system_health": "システムヘルス",
+    "network_status": "ネットワークステータス",
+    "storage_status": "ストレージステータス",
+    "error_statistics": "エラー統計",
+    "connection_details": "接続詳細",
+    "network_tests": "ネットワークテスト",
+    "api_test_result": "APIテスト結果",
+    "browser_memory_usage": "ブラウザのメモリ使用量",
+    "load_times": "読み込み時間",
+    "performance_issues": "パフォーマンスの問題",
+    "troubleshooting_steps": "トラブルシューティングの手順",
+    "common_solutions": "一般的な解決策",
+    "advanced_troubleshooting": "高度なトラブルシューティング",
+    "specific_recommendations": "具体的な推奨事項"
   }
 }
