--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -42,7 +42,8 @@
     "toggle_sidebar": "切换侧边栏",
     "minimize": "最小化",
     "maximize": "最大化",
-    "close": "关闭"
+    "close": "关闭",
+    "notifications": "通知"
   },
   "login": {
     "welcome_to": "欢迎使用",
@@ -85,7 +86,39 @@
   },
   "about": {
     "title": "关于DesQTA",
-    "subtitle": "您的SEQTA Learn桌面体验"
+    "subtitle": "您的SEQTA Learn桌面体验",
+    "modal_aria_label": "关于对话框",
+    "version_information": "版本信息",
+    "version": "版本",
+    "build_date": "构建日期",
+    "platform": "平台",
+    "desktop": "桌面",
+    "built_by": "构建者",
+    "contributors_alt": "DesQTA 贡献者",
+    "features": "功能",
+    "feature_course_management": "课程管理",
+    "feature_timetable": "课程表（周视图、导出、课程详情）",
+    "feature_assessments": "评估跟踪和 AI 成绩预测",
+    "feature_analytics": "分析（成绩分布、性能图表）",
+    "feature_messaging": "Direqt 消息（文件夹、RSS、撰写、私信）",
+    "feature_notifications": "实时通知和提醒",
+    "feature_news": "新闻阅读器（多国 RSS、源选择）",
+    "feature_notice_board": "带标签过滤的通知板",
+    "feature_reports": "报告查看器和下载",
+    "feature_qr_signin": "QR 登录工具",
+    "feature_homepage": "主页快捷方式和自定义小部件",
+    "feature_cloud_sync": "设置的云同步",
+    "feature_theming": "外观和主题自定义",
+    "feature_sidebar": "侧边栏自动折叠和悬停时自动展开",
+    "feature_animations": "增强的趣味 UI 动画",
+    "feature_plugins": "可扩展性插件系统",
+    "feature_ai": "AI 集成（Gemini、成绩和课程分析）",
+    "links": "链接",
+    "github_repository": "GitHub 仓库",
+    "view_source_code": "查看源代码",
+    "website": "网站",
+    "official_website": "官方网站",
+    "copyright": "© 2025 DesQTA。根据 MIT 许可证授权。"
   },
   "dashboard": {
     "quick_links": "快速链接",
@@ -577,5 +610,65 @@
   },
   "study": {
     "tabs_label": "学习部分"
+  },
+  "toast": {
+    "close_notification": "关闭通知",
+    "notifications": "通知"
+  },
+  "user": {
+    "user_menu": "用户菜单",
+    "about": "关于",
+    "app_information": "应用信息",
+    "get_help": "获取帮助",
+    "user_guide_faq": "用户指南和常见问题",
+    "sign_out": "退出登录",
+    "end_session": "结束您的会话",
+    "quit_app": "退出 DesQTA",
+    "close_application": "关闭应用程序"
+  },
+  "modal": {
+    "close_modal": "关闭对话框"
+  },
+  "troubleshooting": {
+    "title": "高级故障排除",
+    "tab_diagnostics": "系统诊断",
+    "tab_errors": "错误日志",
+    "tab_logs": "系统日志",
+    "tab_performance": "性能",
+    "tab_network": "网络",
+    "tab_storage": "存储",
+    "tab_troubleshooting": "故障排除",
+    "run_diagnostics": "运行诊断",
+    "copied": "已复制！",
+    "copy_report": "复制报告",
+    "clear_logs": "清除日志",
+    "loading": "加载中...",
+    "load_logs": "加载日志",
+    "export_all": "全部导出",
+    "no_logs_loaded": "未加载日志",
+    "click_load_logs": "点击\"加载日志\"以获取最近的系统日志",
+    "test_api_connection": "测试 API 连接",
+    "test_internet_connection": "测试互联网连接",
+    "clear_local_storage": "清除本地存储",
+    "clear_session_storage": "清除会话存储",
+    "recent_error_logs": "最近的错误日志",
+    "system_logs": "系统日志",
+    "performance_metrics": "性能指标",
+    "network_information": "网络信息",
+    "storage_information": "存储信息",
+    "system_health": "系统健康",
+    "network_status": "网络状态",
+    "storage_status": "存储状态",
+    "error_statistics": "错误统计",
+    "connection_details": "连接详情",
+    "network_tests": "网络测试",
+    "api_test_result": "API 测试结果",
+    "browser_memory_usage": "浏览器内存使用",
+    "load_times": "加载时间",
+    "performance_issues": "性能问题",
+    "troubleshooting_steps": "故障排除步骤",
+    "common_solutions": "常见解决方案",
+    "advanced_troubleshooting": "高级故障排除",
+    "specific_recommendations": "具体建议"
   }
 }
