--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -26,6 +26,7 @@
     "timetable": "Timetable",
     "study": "Study",
     "goals": "Goals",
+    "forums": "Forums",
     "messages": "Messages",
     "portals": "Portals",
     "notices": "Notices",
