--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -70,7 +70,9 @@
     "sort_recent_first": "Most recent first",
     "sort_oldest_first": "Oldest first",
     "sort_by_author": "By author",
-    "no_messages_match": "No messages match your search."
+    "no_messages_match": "No messages match your search.",
+    "not_enabled": "Forums not available",
+    "not_enabled_message": "Forums are not enabled for your school. Please contact your administrator if you believe this is an error."
   },
   "header": {
     "toggle_sidebar": "Toggle sidebar",
