Folia is a specialized fork of the Minecraft server software (Paper) designed to fix one of the game's oldest limitations: the single-threaded engine.In standard Minecraft, every world and player is processed on a single CPU core. This creates a bottleneck where one busy area can slow down the entire server. Folia introduces regional multithreading, splitting the game world into independent regions. Each region runs on its own thread, allowing a single server to utilize multiple CPU cores simultaneously.This technology enables massive player counts—potentially hundreds or thousands—without the lag typically caused by a single overloaded thread.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -27,6 +27,7 @@
     "study": "Study",
     "goals": "Goals",
     "forums": "Forums",
+    "folios": "Folios",
     "messages": "Messages",
     "portals": "Portals",
     "notices": "Notices",
@@ -73,6 +74,39 @@
     "no_messages_match": "No messages match your search.",
     "not_enabled": "Forums not available",
     "not_enabled_message": "Forums are not enabled for your school. Please contact your administrator if you believe this is an error."
+  },
+  "folios": {
+    "edit_my_folios": "Edit My Folios",
+    "edit_my_folios_description": "Create and manage your personal folios",
+    "browse_folios": "Browse Folios",
+    "browse_folios_description": "Explore and view available folios",
+    "loading": "Loading folios...",
+    "error_loading": "Error loading folios",
+    "no_folios": "No folios available",
+    "no_folios_message": "There are no folios to display.",
+    "published": "Published",
+    "created": "Created",
+    "updated": "Updated",
+    "unpublished": "Unpublished",
+    "published_folios": "Published Folios",
+    "unpublished_folios": "Unpublished Folios",
+    "saved": "Folio saved successfully",
+    "save_error": "Failed to save folio",
+    "new_folio": "New Folio",
+    "creating": "Creating...",
+    "create_error": "Failed to create folio",
+    "tags": "TAGS",
+    "add_tag_placeholder": "Add a tag...",
+    "title_placeholder": "Untitled folio",
+    "allow_comments": "Allow Comments",
+    "publish": "Publish",
+    "unpublish": "Unpublish",
+    "publishing": "Publishing...",
+    "publish_error": "Failed to publish/unpublish folio",
+    "comments": "Comments",
+    "loading_comments": "Loading comments...",
+    "no_comments": "No comments yet. Be the first to comment!",
+    "add_comment": "Add Comment"
   },
   "header": {
     "toggle_sidebar": "Toggle sidebar",
